# chess-app

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yaml
.document-build/: create_planning_docs.py
.github/workflows/: api.yml  compose.yml
apps/ios/: project.yml
apps/ios/ChessApp.xcodeproj/: project.pbxproj
apps/ios/ChessApp.xcodeproj/xcshareddata/xcschemes/: ChessApp.xcscheme
apps/ios/Sources/ChessApp/: AppEnvironment.swift  ChessAppApp.swift  ContentView.swift  ErrorHelpers.swift
apps/ios/Sources/ChessApp/Features/Game/: BoardView.swift  GameView.swift  GameViewModel.swift  PromotionView.swift  SquareView.swift
apps/ios/Sources/ChessApp/Features/GameList/: GameListView.swift
apps/ios/Sources/ChessApp/Features/NewGame/: NewGameView.swift
apps/ios/Sources/ChessApp/Resources/: Info.plist
deploy/: compose.yaml  integration_test.py
deploy/coolify/: README.md
docs/: Chess_App_Phased_Build_Plan.docx  Chess_App_Product_Requirements.docx
services/ai/: .env.example  Dockerfile  README.md  pyproject.toml
services/ai/app/: __init__.py  errors.py  main.py  registry.py  schemas.py  service.py
services/ai/app/api/: errors.py  routes.py
services/ai/app/bots/: base.py  evaluation.py  heuristic_bot.py  level_bot.py  random_bot.py  search_bot.py  stockfish_bot.py
services/ai/app/core/: config.py  logging.py
services/ai/app/engine/: manager.py
services/ai/tests/: conftest.py  test_api.py  test_bots.py
services/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/ai/: client.py  constants.py  orchestrator.py
services/api/app/api/: errors.py  health.py
services/api/app/api/v1/: games.py
services/api/app/auth/: identity.py
services/api/app/core/: config.py  logging.py  middleware.py
services/api/app/db/: base.py  models.py  session.py
services/api/app/games/: chess_engine.py  errors.py  schemas.py  service.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial.py  0002_ai_games.py
services/api/tests/: conftest.py  test_ai_orchestration.py  test_chess_engine.py  test_game_service.py  test_games_api.py  test_health.py
